--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,8 +54,8 @@ jobs:
           asset_path: ./lm10.db.zip # path to archive to upload
           asset_name: lm10.db.zip # name to upload the release as, use $$ to insert date (YYYYMMDD) and 6 letter commit hash
           asset_content_type: application/zip # required by GitHub API
-      - name: Commit changes
-        uses: EndBug/add-and-commit@v7
-        with:
-          message: 'update'
-          add: 'reports/full/*'
+      # - name: Commit changes
+      #   uses: EndBug/add-and-commit@v7
+      #   with:
+      #     message: 'update'
+      #     add: 'reports/full/*'
